--- a/css/navbar.css
+++ b/css/navbar.css
@@ -11,14 +11,19 @@ html {
   font-size: 62.5%;
 }
 
-/*body {
-  background: url("img.jpg") no-repeat center center/cover;
+body {
+  /*background: url("img.jpg") no-repeat center center/cover;*/
   height: 100vh;
-  overflow: hidden;
-}*/
+  /*overflow: hidden;*/
+ 
+}
 
 header {
-  position: fixed;
+  /*position: fixed;*/
+  top: 0;
+  left: 0;
+
+  height: 70px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -42,6 +47,8 @@ header .navbar {
   display: flex;
   justify-content: center;
   align-items: center;
+  top: 0%;
+  margin: 10px;
 }
 
 header .navbar a {
